--- a/css/creative.css
+++ b/css/creative.css
@@ -38,8 +38,13 @@ a:hover {
 }
 
 #about a {
-    background-color: lightgrey;
-    color: rgba(52, 52, 52, .7);
+    color: rgba(46,46,46, 1);
+}
+
+#about a:hover,
+#about a:focus {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 1);
 }
 
 p.section-a-page-scroll > a,
@@ -48,10 +53,13 @@ p.section-a-page-scroll > a,
     padding: 2px;
 }
 
-#about a:hover,
-#about a:focus {
-    color: rgba(52, 52, 52, .7);
+p.section-a-page-scroll > a:hover,
+.modal-body a:hover {
+    text-decoration: none;
+    color: rgba(0, 0, 0, 1);
+    background-color: rgba(255, 231, 99, 1) !important;
 }
+
 
 h1 {
     letter-spacing: 5px;
@@ -70,11 +78,15 @@ h5,
 h6 {
     font-family: 'Lato', sans-serif;
     font-weight: 400;
+    font-size: 18px;
+    margin-top: 17px;
+    margin-bottom: 15px;
 }
 
 p {
     margin-bottom: 40px;
-    font-size: 15px;
+    font-size: 17px;
+    font-weight: 300;
     line-height: 1.5;
     text-align: justify;
 }
@@ -110,7 +122,7 @@ p {
 }
 
 .text-faded {
-    color: rgba(46,46,46,.7);
+    color: rgba(46,46,46, 1);
 }
 
 #aside .text-faded {
@@ -372,6 +384,8 @@ header .header-content .header-content-inner p {
 
 .service-box p {
     margin-bottom: 0;
+    padding-left: 3px;
+    padding-right: 3px;
 }
 
 .portfolio-box {
@@ -410,18 +424,19 @@ header .header-content .header-content-inner p {
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    padding: 0 15px;
+    padding: 3px 15px;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
     text-transform: uppercase;
     font-size: 14px;
-    font-weight: 600;
+    font-weight: 400;
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-    font-family: 'Vollkorn', serif;
-    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 16px;
 }
 
 .portfolio-box:hover .portfolio-box-caption {
@@ -434,8 +449,7 @@ header .header-content .header-content-inner p {
     }
 
     .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-        font-family: 'Vollkorn', serif;
-        font-size: 22px;
+        font-size: 21px;
     }
 }
 
@@ -562,7 +576,7 @@ fieldset[disabled] .btn-primary.active {
     border: 0;
     border-radius: 20px;
     text-transform: uppercase;
-    font-family: 'Palanquin', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 700;
 }
 
