--- a/css/creative.css
+++ b/css/creative.css
@@ -70,6 +70,7 @@ h1 {
 
 h2{
     font-family: 'Libre Baskerville', serif;
+    font-style: italic;
     font-size: 28px;
     margin-bottom: 30px;
 }
