--- a/css/creative.css
+++ b/css/creative.css
@@ -12,6 +12,7 @@ body {
 
 body {
     font-family: 'Lato', sans-serif;
+    letter-spacing: 3px;
     color: #2E2E2E;
 }
 
@@ -25,16 +26,17 @@ hr.light {
     border-color: #fff;
 }
 
-a, a:focus {
+a, a:focus, #contact a span {
     outline: 0;
-    color: rgba(9, 9, 9, 0.7);
+    text-decoration: none;
+    color: rgba(0, 0, 0, 0.7);
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
 }
 
-a:hover {
-    color: rgba(0, 0, 0, .5);
+a:hover, a:focus  {
+    color: rgba(244, 244, 244);
 }
 
 #about a {
@@ -50,16 +52,23 @@ a:hover {
 }
 
 p.section-a-page-scroll > a,
-.modal-body a {
+.modal-body a,
+.contacts-wrapper a span {
     background-color: rgba(255, 241, 111, 0.8) !important;
     padding: 2px;
 }
 
 p.section-a-page-scroll > a:hover,
-.modal-body a:hover {
+.modal-body a:hover,
+.contacts-wrapper a:hover span  {
     text-decoration: none;
-    color: rgba(0, 0, 0, 1);
     background-color: rgba(255, 231, 99, 1) !important;
+    color: rgba(0, 0, 0, 1);
+}
+
+#contact a:hover {
+    color: rgba(0, 0, 0, 1);
+    text-decoration: none;
 }
 
 
@@ -80,15 +89,16 @@ h4,
 h5,
 h6 {
     font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 18px;
-    margin-top: 17px;
-    margin-bottom: 15px;
+    font-weight: 300;
+    text-transform: uppercase;
+    font-size: 16px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 p {
     margin-bottom: 40px;
-    font-size: 17px;
+    font-size: 15px;
     font-weight: 300;
     line-height: 1.5;
     text-align: justify;
@@ -111,9 +121,21 @@ p {
     padding-left: 15px;
 }
 */
+
+.contact-header {
+    text-transform: uppercase;
+    padding-top: 8px;
+}
+
 #contact p {
     text-align: center;
+    margin-bottom: 3px;
 }
+
+.contacts-wrapper div {
+    margin-top: 25px;
+}
+
 
 .bg-primary {
     background-color: rgb(253, 252, 255);
@@ -189,7 +211,7 @@ aside {
 .navbar-default .nav > li>a {
     color: #2E2E2E;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 300;
     padding-bottom: 12px;
     display: block;
@@ -370,10 +392,6 @@ header .header-content .header-content-inner p {
     margin-top: 0;
 }
 
-.section-heading span {
-    background-color: rgba(255, 231, 99, 0.8) !important;
-}
-
 .service-box {
     margin: 50px auto 0;
     max-width: 400px;
@@ -387,8 +405,8 @@ header .header-content .header-content-inner p {
 
 .service-box p {
     margin-bottom: 0;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding-left: 25px;
+    padding-right: 25px;
 }
 
 .portfolio-box {
@@ -396,6 +414,20 @@ header .header-content .header-content-inner p {
     position: relative;
     margin: 0 auto;
     max-width: 650px;
+}
+
+.portfolio-box img {
+    filter: gray; /* IE6-9 */
+    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    filter: grayscale(100%); /* Firefox 10+, Firefox on Android */
+    -webkit-transition: all .7s;
+    -moz-transition: all .7s;
+    transition: all .7s;
+}
+
+.portfolio-box:hover img {
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
 }
 
 .portfolio-link:focus {
@@ -411,7 +443,7 @@ header .header-content .header-content-inner p {
     text-align: center;
     color: #fff;
     opacity: 0;
-    background: rgba(255, 255, 255, .8);
+    background: rgba(255, 255, 255, .4);
     -webkit-transition: all .7s;
     -moz-transition: all .7s;
     transition: all .7s;
@@ -439,7 +471,7 @@ header .header-content .header-content-inner p {
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
-    font-size: 16px;
+    font-size: 15px;
 }
 
 .portfolio-box:hover .portfolio-box-caption {
@@ -461,7 +493,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: rgba(193, 193, 186, 0.7);
+    color: rgba(0, 0, 0, 0.7);
 }
 
 .no-gutter > [class*=col-] {
