photos and new text according to business model changes
generated from commit df43b64ea571cc5c98605391ce0e1d39a5519afc

--- a/css/creative.css
+++ b/css/creative.css
@@ -96,6 +96,11 @@ h6 {
     margin-bottom: 30px;
 }
 
+/* h4 is for the service subtitle */
+h4 {
+    
+}
+
 p {
     margin-bottom: 40px;
     font-size: 15px;
