email adress centered deploy
generated from commit 6ddd0164a3cd70b83ff0d3b3c1973c7142374732

--- a/css/creative.css
+++ b/css/creative.css
@@ -137,6 +137,11 @@ p {
     margin-bottom: 3px;
 }
 
+/* To correct long email address */
+.left-correction {
+    margin-left: -12px;
+}
+
 .contacts-wrapper div {
     margin-top: 25px;
 }
