--- a/css/creative.css
+++ b/css/creative.css
@@ -148,7 +148,7 @@ p {
 
 
 .bg-primary {
-    background-color: rgb(253, 252, 255);
+    background-color: white;
 }
 
 .bg-dark {
@@ -166,7 +166,7 @@ p {
 
 section {
     padding: 60px 0;
-    background: rgb(253, 252, 255);
+    background: white;
 }
 
 section#contact {
@@ -180,6 +180,12 @@ section#contact {
 
 #about {
     padding-bottom: 0;
+}
+
+@media screen and (min-device-width: 980px) {
+    .twitter-container {
+        padding-left: 40px;
+    }
 }
 
 .profile-pic {
